# 26-px4_offboard_control

./: .gitignore  README.md  ROOT_SCRIPTS_QUICK_REF.md  SCRIPTS_GUIDE.md  check_fastlio_global_3d_map.sh  check_relocalization_status.sh  check_takeoff_autostart_ready.sh  delete_recorded_rosbags.sh  disable_autostart.sh  enable_autostart.sh  fastlio_mavros_check.sh  load_fastlio_global_3d_map.sh  record_takeoff_debug_bag.sh  refresh_last_rosbag_status.sh  run_fastlio_global_relocalization.sh  run_fastlio_global_slam.sh  run_hover_30cm_offboard.sh  run_nav2_relocalized_map.sh  run_nav2_stage1_planning.sh  run_takeoff_30cm_hold.sh  save_fastlio_global_3d_map.sh  save_fastlio_nav2_map.sh  show_last_rosbag_status.sh  start_takeoff_1m_stack_login.sh  start_takeoff_30cm_stack.sh  start_takeoff_30cm_stack_login.sh  stop_nav2_relocalized_map.sh  stop_takeoff_debug_bag.sh  trigger_fastlio_relocalize.sh  ws_offboard_rosbag_shutdown.service
flight_records/20260611/flight_20260611_200520/snapshot/: environment.txt  fastlio_mavros_vision_bridge.params.yaml  flight_run_dir.txt  flight_timestamp.txt  ros2_node_list.txt  rosbag_status.txt
flight_records/20260611/flight_20260611_200520_r1/snapshot/: environment.txt  flight_run_dir.txt  ros2_node_list.txt  ros2_topic_list.txt
flight_records/20260611/flight_20260611_200520_r2/snapshot/: environment.txt  flight_run_dir.txt  git_diff_stat.txt  rosbag_status.txt  run_takeoff_30cm_hold.sh
flight_records/20260611/flight_20260611_200900/snapshot/: environment.txt  flight_run_dir.txt  flight_timestamp.txt  git_status.txt  rosbag_status.txt
flight_records/20260611/flight_20260611_201157/snapshot/: flight_run_dir.txt  flight_timestamp.txt  ros2_topic_list.txt  rosbag_status.txt
flight_records/20260611/flight_20260611_201323/snapshot/: flight_run_dir.txt  flight_timestamp.txt  rosbag_status.txt  start_takeoff_30cm_stack.sh
flight_records/20260611/flight_20260611_201634/snapshot/: environment.txt  flight_run_dir.txt  flight_timestamp.txt  mid360_source_path.txt  rosbag_status.txt
flight_records/20260611/flight_20260611_201836/snapshot/: environment.txt  flight_run_dir.txt  flight_timestamp.txt  mid360.yaml  ros2_node_list.txt  rosbag_status.txt
flight_records/20260611/flight_20260611_202246/snapshot/: environment.txt  flight_run_dir.txt  flight_timestamp.txt  (+4 more)
maps/: fastlio_nav2_map.pgm  fastlio_nav2_map.yaml
maps/fastlio_global_3d/: GlobalMap.pcd  metadata.csv
maps/fastlio_global_3d/keyframes/: keyframe_000000.pcd  keyframe_000001.pcd  keyframe_000002.pcd  keyframe_000003.pcd  keyframe_000004.pcd  keyframe_000005.pcd  keyframe_000006.pcd  keyframe_000007.pcd  keyframe_000008.pcd  keyframe_000009.pcd  keyframe_000010.pcd  keyframe_000011.pcd  keyframe_000012.pcd  keyframe_000013.pcd  keyframe_000014.pcd  keyframe_000015.pcd  keyframe_000016.pcd  keyframe_000017.pcd  keyframe_000018.pcd  keyframe_000019.pcd  keyframe_000020.pcd  keyframe_000021.pcd  keyframe_000022.pcd  keyframe_000023.pcd  keyframe_000024.pcd  keyframe_000025.pcd  keyframe_000026.pcd  keyframe_000027.pcd  keyframe_000028.pcd  keyframe_000029.pcd
runtime/: last_rosbag_status.txt  takeoff_debug_bag_run_dir.txt
src/fastlio_global_slam/: CMakeLists.txt  package.xml
src/fastlio_global_slam/config/: backend.yaml  fastlio_global_slam.rviz  relocalization.yaml
src/fastlio_global_slam/launch/: fastlio_global_slam.launch.py
src/fastlio_global_slam/src/: fastlio_global_backend.cpp
src/fastlio_global_slam/srv/: LoadMap.srv  Relocalize.srv  SaveMap.srv
src/offboard_nav2_planning/: package.xml  setup.cfg  setup.py
src/offboard_nav2_planning/config/: nav2_planner_pointcloud.yaml  nav2_planner_relocalized_map.yaml  nav2_planner_static_map.yaml
src/offboard_nav2_planning/launch/: nav2_planner_only.launch.py
src/offboard_nav2_planning/offboard_nav2_planning/: goal_to_path.py  odometry_tf_publisher.py  path_2_5d_lifter.py  relocalized_pose_to_tf.py  save_2d_map_from_cloud.py
src/offboard_nav2_planning/rviz/: nav2_stage1_planning.rviz
src/px4_ros_com/: CMakeLists.txt  package.xml
src/px4_ros_com/config/: mavros_px4_identity_override.yaml
src/px4_ros_com/launch/: fastlio_mavros_autofix.launch.py  fastlio_mavros_odometry_bridge.launch.py  fastlio_mavros_tf.launch.py  fastlio_vehicle_visual_odometry.launch.py
src/px4_ros_com/scripts/: fix_mavros_identity.py  fix_mavros_odometry_frames.py  minipc_mavros_offboard.py  minipc_offboard_control.py
(+323 files in other folders)
